<resources>
    <string name="app_name">DiaperTracker</string>
    <string name="topBaby" translatable="false">Auberon</string>
    <string name="middleBaby" translatable="false">Blaise</string>
    <string name="bottomBaby" translatable="false">Langdon</string>
    <string name="infoPlaceholder">Last Diaper Change Info which is pretty long because the wrap is problematic</string>

    <string name="nameLabel">Baby Name:</string>
    <string name="timeLabel">Time of Change:</string>
    <string name="typeLabel">Type of Diaper:</string>
    <string name="clothType">Cloth</string>
    <string name="disposableType">Disposable</string>
    <string name="poopLabel">Poop Present</string>
    <string name="bathLabel">Bath</string>
    <string name="commentsLabel">Comments:</string>

    <string name="saveButton">Save</string>
    <string name="cancel">Cancel</string>
    <string name="changeDate">Date</string>
    <string name="changeTime">Time</string>

    <string name="lastPoop">Poop:</string>
    <string name="lastBath">Bath:</string>

    <string name="unknown">unknown</string>

    <string name="diaper_details">Details</string>
    <string name="history">History</string>
    <string name="ten_more">Get 10 more records</string>
    <string name="get_all">Get all records</string>

    <string name="firebase_ref_path">changes</string>

</resources>
