<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp">
<TextView
    android:text="@string/diaper_details"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    >
<android.support.constraint.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/nameLabel" />

    <Button
        android:id="@+id/btn_time"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeTime"
        android:background="@color/colorChangeTime"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp"
        android:textSize="32sp"/>


    <Button
        android:id="@+id/btn_date"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changeDate"
        android:background="@color/colorChangeTime"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_time"
        android:layout_margin="16dp"
        android:textSize="32sp"/>

    <RadioGroup
        android:id="@+id/rg_diaper_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvName">

        <RadioButton
            android:id="@+id/rb_cloth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/clothType"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rb_disposable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:text="@string/disposableType"
            android:onClick="onRadioButtonClicked"/>


    </RadioGroup>

    <CheckBox
        android:id="@+id/cb_poop_present"
        android:textSize="32sp"
        android:text="@string/poopLabel"
        android:layout_margin="28dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rg_diaper_type"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="onCheckBoxClicked"/>

    <CheckBox
        android:id="@+id/cb_bath"
        android:textSize="32sp"
        android:text="@string/bathLabel"
        android:layout_margin="28dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cb_poop_present"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="onCheckBoxClicked"/>

    <ImageView
        android:id="@+id/iv_bath"
        android:src="@drawable/bath"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="50dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/cb_bath"
        app:layout_constraintTop_toTopOf="@id/cb_bath"
        app:layout_constraintBottom_toBottomOf="@id/cb_bath"/>

    <!-- Icons made by Freepik from https://www.flaticon.com/		    www.flaticon.com< is licensed by http://creativecommons.org/licenses/by/3.0/ 			   Creative Commons BY 3.0 CC 3.0 BY -->

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveButton"
        app:layout_constraintLeft_toRightOf="@id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@id/cb_bath"
        android:layout_margin="28dp"
        android:textSize="32sp"
        android:background="@color/colorGo"
        android:onClick="saveDiaper"
        />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_bath"
        android:layout_margin="28dp"
        android:textSize="32sp"
        android:background="@color/colorCancel"
        android:onClick="cancel" />


    <TextView
        android:id="@+id/commentLabel"
        android:text="@string/commentsLabel"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cancel"
        android:layout_margin="28dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etComments"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="28dp"
        app:layout_constraintTop_toBottomOf="@id/commentLabel"
        app:layout_constraintLeft_toLeftOf="parent"/>



</android.support.constraint.ConstraintLayout>
</ScrollView>
</LinearLayout>