<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/buttonTop"
        android:layout_height="100dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="28dp"
        android:background="@color/colorTopBaby"
        android:text="@string/topBaby"
        android:textSize="32sp"
        android:onClick="openDetails"
        />

    <TextView
        android:id="@+id/textViewTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonTop"
        app:layout_constraintLeft_toLeftOf="@id/buttonTop"
        android:layout_margin="8dp"
        tools:text="@string/infoPlaceholder"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/buttonTop"
         />

    <Button
        android:id="@+id/buttonMiddle"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="28dp"
        android:background="@color/colorMiddleBaby"
        android:text="@string/middleBaby"
        android:textSize="32sp"
        android:onClick="openDetails"
            />


    <TextView
        android:id="@+id/textViewMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonMiddle"
        app:layout_constraintLeft_toLeftOf="@id/buttonMiddle"
        app:layout_constraintStart_toStartOf="@id/buttonMiddle"
        android:layout_margin="8dp"
        tools:text="@string/infoPlaceholder"
        android:textSize="28sp"
         />


    <Button
        android:id="@+id/buttonBottom"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/textViewMiddle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="28dp"
        android:background="@color/colorBottomBaby"
        android:text="@string/bottomBaby"
        android:textSize="32sp"
        android:onClick="openDetails" />

    <TextView
        android:id="@+id/textViewBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonBottom"
        app:layout_constraintLeft_toLeftOf="@id/buttonBottom"
        app:layout_constraintStart_toStartOf="@id/buttonBottom"
        android:layout_margin="8dp"
        tools:text="@string/infoPlaceholder"
        android:textSize="28sp"
         />






</android.support.constraint.ConstraintLayout>